tests/ui/type-alias-impl-trait/type-alias-impl-trait-with-cycle-error-3.stderr
error[E0275]: overflow evaluating the requirement `<Foo<'_> as FnOnce<()>>::Output == Foo<'a>`
  --> $DIR/type-alias-impl-trait-with-cycle-error-3.rs:5:40
   |
LL | fn crash<'a>(_: &'a (), x: Foo<'a>) -> Foo<'a> {
   |                                        ^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0275`.
